syntax = "proto3";
package cyneruxyz.api.v1;
option go_package = "./proto";

import "google/api/annotations.proto";


service APIService {
  rpc Echo(EchoRequest) returns(Response) {
    option (google.api.http) = {
      post:  "/echo"
      body: "*"
    };
  }
  rpc CreateAddressField(AddressFieldRequest) returns (Response) {
    option (google.api.http) = {
      post: "/addressbook"
      body: "*"
    };
  }

  rpc ReadAddressField(AddressFieldQuery) returns (stream AddressField) {
    option (google.api.http) = {
      get:  "/addressbook"
    };
  }

  rpc UpdateAddressField(AddressFieldUpdateRequest) returns (Response) {
    option (google.api.http) = {
      put:  "/addressbook",
      body: "*"
    };
  }
  
  rpc DeleteAddressField(Phone) returns (Response) {
    option (google.api.http) = {
      delete: "/addressbook"
    };
  }
}

message AddressField {
  string name = 1;
  string address = 2;
  Phone phone = 3; // Unique ID number for this person
}

message Phone {
  string phone = 1;
}

message AddressFieldQuery {
  string param = 1;
}

message AddressFieldRequest {
  AddressField field = 1;
}

message AddressFieldUpdateRequest {
  Phone phone = 1;
  AddressField replacementField = 2;
}

message EchoRequest {
  string message = 1;
}

message Response {
  string message = 1;
}
